testsuite/tests/typecheck/should_compile/T26154/T26154.hs
module Main where

import {-# SOURCE #-} B
import Other

main = print $ "hello"
