testsuite/tests/typecheck/should_fail/T27390.hs
{-# language NoStarIsType #-}
module Main where

import T27390a

main = someFunc
